variables.RunFour.scala.error
Compilation error:
RunFour:2: error: not found: value Baggel
while (Baggel!=4){
       ^